# twinsync

./: .gitignore  db.sqlite3  manage.py  pyproject.toml  requirements.txt  vercel.json
core/: models.py  serializers.py  urls.py  utils.py  views.py
core/migrations/: 0001_initial.py
twinsync/: asgi.py  settings.py  urls.py  wsgi.py
